# boxer-issuer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  docker-compose.yaml  integration-tests.env  settings.toml
.container/: Dockerfile
.github/workflows/: bild-container-image.yaml  build-container-image.yaml  build.yaml  publish-ecr-public.yaml
.helm/: Chart.yaml  values.yaml
.helm/templates/: _helpers.tpl  cluster-role-binding-configmap-editor.yaml  cluster-role-binding-lease-editor.yaml  cluster-role-binding.yaml  cluster-role-configmap-editor.yaml  cluster-role-lease-editor.yaml  deployment.yaml  disruption-budget.yaml  secrets.yaml  service-account.yaml  service.yaml
docs/: quickstart.md
integration-tests/: keycloak.tf
integration-tests/helm/integration_tests/: Chart.yaml
loading-tests/: get-schema.js
src/: lib.rs  main.rs
src/http/: conversions.rs  errors.rs  middleware.rs  mod.rs  openapi.rs  urls.rs
src/http/controllers/: association.rs  attachment.rs  identity.rs  mod.rs  policy.rs  principal.rs  provider.rs  schema.rs  token.rs  v1.rs
src/http/controllers/identity/: external_identity_registration.rs  external_identity_registration_request.rs
src/http/controllers/principal/: principal_create_response.rs
src/http/controllers/provider/: oidc_provider_registration.rs
src/http/controllers/v1/: identity.rs  principal.rs  provider.rs  schema.rs  token.rs
src/http/controllers/v1/identity/: external_identity_registration.rs  external_identity_registration_request.rs
src/http/middleware/: extract_external_token.rs
src/models/: identity_provider_registration.rs  mod.rs  principal.rs
src/models/api/internal/v1/: token.rs
src/models/internal/v1/: token.rs
src/services/: configuration_manager.rs  external_identity_validator.rs  identity_validator_provider.rs  mod.rs  principal_service.rs  token_service.rs
src/services/backends/: base.rs  in_memory.rs  kubernetes.rs  mod.rs
src/services/backends/kubernetes/: common.rs  identity_provider_repository.rs  identity_repository.rs  kubernetes_validator_provider.rs  models.rs  principal_association_repository.rs  principal_repository.rs  schema_repository.rs  tests.rs
src/services/backends/kubernetes/common/: fixtures.rs  synchronized_kubernetes_resource_manager.rs  update_handler.rs
src/services/backends/kubernetes/identity_provider_repository/: identity_provider_spec.rs
src/services/backends/kubernetes/identity_repository/: external_identity.rs  tests.rs
src/services/backends/kubernetes/models/: base.rs  identity_provider.rs
src/services/backends/kubernetes/principal_association_repository/: tests.rs
src/services/backends/kubernetes/principal_repository/: cedar_entity_document.rs  principal_identity.rs  test_principal.rs  tests.rs
src/services/backends/kubernetes/schema_repository/: test_reduced_schema.rs  test_schema.rs  tests.rs
src/services/base/: upsert_repository.rs
src/services/configuration/: app_settings.rs  mod.rs  models.rs
src/services/configuration/base/: initialization_configuration_manager.rs  mod.rs
src/services/repositories/: in_memory.rs
tests/: token_service.rs
tests/util/: identity_repository.rs  mod.rs  principal_association_repository.rs  principal_repository.rs  schema_repository.rs  test_data.rs  validators.rs
