[package]
name = "boxer-issuer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.9.0"
jwt = "0.16.0"
async-trait = "0.1.81"
jwt-authorizer = "0.15.0"
env_logger = "0.11.5"
serde_json = "1.0.125"
anyhow = "1.0.86"
log = { version=  "0.4.22", features = ["kv"] }
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
serde = { version = "1.0.207", features = ["derive"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
utoipa = { version = "5.3.1", features = ["actix_extras"] }
cedar-policy = "4.4.0"
futures = "0.3.31"
config = "0.15.11"
kube = { version = "1.1.0", features = ["config", "client", "runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
uuid = {  version = "1.17.0", features = ["v4"] }

[dev-dependencies]
test-context = "0.4.1"
maplit = "1.0.2"
rstest = "0.25.0"
