[package]
name = "boxer-issuer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"

jwt-authorizer = "0.15.0"
async-trait = "0.1.81"
env_logger = "0.11.5"
serde_json = "1.0.125"
anyhow = "1.0.86"
log = { version = "0.4.22", features = ["kv"] }
hmac = "0.12.1"
sha2 = "0.10.8"
serde = { version = "1.0.207", features = ["derive"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
utoipa = { version = "5.3.1", features = ["actix_extras"] }
cedar-policy = "4.4.0"
config = "0.15.11"
serde_yml = "0.0.12"
schemars = "0.8.6"
duration-string = "0.5.2"
env_filter = "0.1.3"
md5 = "0.8.0"
josekit = "0.10.3"

# Kubernetes dependencies
kube = { version = "0.99.0", features = ["config", "client", "runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }

# opentelemety
opentelemetry-instrumentation-actix-web = "0.22.0"

#boxer_core = { path = "../boxer-core/" }
boxer_core = { git = "https://github.com/SneaksAndData/boxer-core.git", tag = "v0.0.12" }

[dev-dependencies]
rstest = "0.25.0"
#boxer_core = { path = "../boxer-core/", features = ["testing"] }
boxer_core = { git = "https://github.com/SneaksAndData/boxer-core.git", tag = "v0.0.12" }
